Fixed missing close paren in template

--- a/django_htmx_example/templates/locations/partials/results.html
+++ b/django_htmx_example/templates/locations/partials/results.html
@@ -5,7 +5,7 @@
       {% for dl in duty_locations %}
         <li>
           {{ dl.name }}
-          {% if dl.affiliation %}({{ dl.affiliation }}{% endif %}
+          {% if dl.affiliation %}({{ dl.affiliation }}){% endif %}
         </li>
       {% endfor %}
     </ul>
