Changed keyup trigger to input (better for pasting)

--- a/django_htmx_example/templates/locations/location_search.html
+++ b/django_htmx_example/templates/locations/location_search.html
@@ -17,7 +17,7 @@
            value="{{ request.GET.search }}"
            placeholder="begin typing..."
            hx-get="/locations/search/"
-           hx-trigger="keyup changed delay:500ms, search"
+           hx-trigger="input changed delay:500ms, search"
            hx-target="#search-results"
            hx-indicator=".htmx-indicator"
            hx-push-url="true" />
